--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Arimo:100, 300|Titillium+Web&display=swap');
+
 html, body {
     height: 100%;
     margin: 0;
@@ -6,11 +8,16 @@ html, body {
 }
 #landing {
     min-height:100%;
+    padding-top:2.5em;
+    font-family: Arimo
 }
 #wrapper{
     text-align: center;
-    padding-top: 15em;
+    padding-top: 12.5em;
 }
 .centex{
     display:inline-block
+}
+
+.twinge{
 }
